--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ h2{font:bold 0.8em sans-serif;text-transform:uppercase;padding:0.2em 0;}
 h2 a{color:#39c;}
 h2 a.edit-page{color:#aaa;font:0.7em Helvetica,sans-serif;position:absolute;right:25em;top:20em;}
 h2 a.edit-page:hover{color:#777;}
+
 .copy{margin-right:10em;overflow:hidden;}
 .supplemental{position:absolute;right:0;top:11em;width:10em;}
 .supplemental{border-left:1px solid #eee;padding:1em;}
@@ -41,3 +42,8 @@ abbr{font-variant:small-caps;font-size:0.95em;}
 .copy table td{border-left:1px solid #e8e8e8;padding:0.5em;}
 .copy table td{font:0.8em Helvetica,sans-serif;border-bottom:1px solid #e8e8e8;}
 .copy h1{font:bold 1.2em sans-serif;text-transform:uppercase;padding:0.2em 0;}
+.copy img{max-width:100%;float:right;}
+.media{width:68%;padding:1em;background-color:#f8f8f8;margin-top:1em;}
+.media p#status{font:bold 0.9em Helvetica,sans-serif;}
+.media .format-type{float:right;}
+.media .submit{display:block;margin-top:1em;}
